<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact_us"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    android:padding="15dp"
    >

    <TextView
        android:id="@+id/Title"
        android:layout_width="363dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/Contact_us"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:text="@string/Mobile_no"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/MN_1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/MN_2"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/MN_3"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/Telephone_no"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/TN_4"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/TN_5"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Website_link"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="311dp"
        android:layout_height="51dp"
        android:background="@drawable/textview_border"
        android:layout_gravity="center"
        android:text="@string/Blank"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Facebook_page"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="311dp"
        android:layout_height="51dp"
        android:background="@drawable/textview_border"
        android:layout_gravity="center"
        android:text="@string/Blank"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>