<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Visiting_hours"
    android:padding="10dp"
    android:background="@android:color/holo_green_light">


 <TextView
     android:layout_width="match_parent"
     android:layout_height="66dp"
     android:layout_marginTop="30dp"
     android:gravity="center"
     android:scrollbars="vertical"
     android:text="@string/Working_days"
     android:textColor="@color/black"
     android:textSize="35sp"
     android:textStyle="bold" />

 <TextView
     android:layout_width="match_parent"
     android:layout_height="59dp"
     android:layout_marginTop="10dp"
     android:gravity="center"
     android:text="@string/SMT"
     android:textColor="@color/teal_700"
     android:textSize="27sp"
     android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_border"
        android:text="@string/t1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

 <TextView
     android:layout_width="match_parent"
     android:layout_height="63dp"
     android:layout_marginTop="10dp"
     android:gravity="center"
     android:text="@string/WT"
     android:textColor="@color/teal_700"
     android:textSize="30sp"
     android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@drawable/textview_border"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/t2"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

 <TextView
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_marginTop="10dp"
     android:gravity="center"
     android:text="@string/off_days"
     android:textColor="@color/design_default_color_error"
     android:textSize="30sp"
     android:textStyle="bold" />

 <TextView
     android:layout_width="match_parent"
     android:layout_height="55dp"
     android:gravity="center"
     android:text="@string/FAL"
     android:textColor="@color/design_default_color_error"
     android:textSize="30sp"
     android:textStyle="bold" />


</LinearLayout>