<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    android:padding="20dp">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/Register_Progressbar"/>
    <TextView
        android:id="@+id/Fillup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Fillup"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/FullName"
        android:hint="@string/Full_Name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/E_Mail"
        android:hint="@string/E_Mail"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/ContactNumber2"
        android:hint="@string/Contact_Number"
        android:inputType="number"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/Password_Condition"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/password_condition"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        

        <EditText
            android:id="@+id/Registor_password"
            android:layout_width="149dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Registor_confirm_password"
            android:layout_width="196dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NID_NO"
            android:layout_width="175dp"
            android:layout_height="63dp"
            android:text="@string/NID_NO"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Gender"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:text="@string/Gender"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/NID_NO_PICK"
            android:layout_width="183dp"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edittext_background"
            android:hint="Text Here"
            android:gravity="center"
            android:inputType="number"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/GRB"
            android:layout_width="138dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/RB_1"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="Male"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/RB_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="Female"
                android:textSize="20dp"/>

        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:textStyle="bold" />


</LinearLayout>