<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@android:color/holo_green_light"
    tools:context=".Appointment">

    <TextView
        android:id="@+id/Title"
        android:layout_width="363dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/Appointment"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Patient_Name"
        android:hint="@string/Patient_Name"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/ContactNumber3"
        android:hint="@string/Contact_Number"
        android:inputType="number"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/Age"
        android:hint="@string/Age"
        android:inputType="number"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="169dp"
            android:layout_height="233dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="137dp"
                android:layout_height="53dp"
                android:text="@string/Gender"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

            <RadioGroup
                android:id="@+id/GRB_2"
                android:layout_width="138dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/RB_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/RB_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textSize="30dp"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="235dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/Visiting_date"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Visiting_date_Picker"
                android:layout_width="186dp"
                android:layout_height="50dp"
                android:layout_marginRight="50dp"
                android:hint="Select Date"
                android:inputType="date"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/purple_700"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:text="@string/Doctor_fee"/>
    <Button
        android:id="@+id/Register2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/make_appointment"
        android:textSize="20sp"
        android:background="@color/teal_700"
        android:textStyle="bold" />


</LinearLayout>