<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    android:padding="20dp"
    tools:context=".PatientDashboard">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/Building2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/hospital_building" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/Patient_dashboard"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/PDLL_3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/Appointment"
                android:layout_width="144dp"
                android:layout_height="106dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/appointment" />

            <TextView
                android:id="@+id/Appointment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Appointment"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/PDLL_4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/About_doctor"
                android:layout_width="144dp"
                android:layout_height="106dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/about_doctor" />

            <TextView
                android:id="@+id/About_doctor_text"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:text="@string/About_Doctor"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/PDLL_5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Visiting_hours"
                android:layout_width="144dp"
                android:layout_height="106dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/visiting_hour" />

            <TextView
                android:id="@+id/Visiting_hours_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/Visiting_hours"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/PDLL_6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Standings"
                android:layout_width="144dp"
                android:layout_height="106dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/p_standings" />

            <TextView
                android:id="@+id/Standings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/Standings"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/PDLL_7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Contact_us"
                android:layout_width="144dp"
                android:layout_height="106dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/contact_us" />

            <TextView
                android:id="@+id/Contact_us_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Contact_us"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/PDLL_8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Sign_out"
                android:layout_width="147dp"
                android:layout_height="108dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/sign_out"
                android:contentDescription="@string/Sign_out" />

            <TextView
                android:id="@+id/Sign_out_text"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/Sign_out"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>

